cli/tests/snapshot/snapshots/snapshot__test_stderr_fail_wrong_output.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a value
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ std.contract.Equal 2
   │ -------------------- expected type
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
   │
 1 │ foo
   │ ^^^ applied to this expression
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:30:7
   │
30 │     = 1,
   │       - evaluated to this expression

error: contract broken by a value
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ std.contract.Equal 2
   │ -------------------- expected type
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
   │
 1 │ foo
   │ ^^^ applied to this expression
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:30:7
   │
30 │     = 1,
   │       - evaluated to this expression

error: contract broken by a value
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ std.contract.Equal 2
   │ -------------------- expected type
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
   │
 1 │ foo
   │ ^^^ applied to this expression
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:30:7
   │
30 │     = 1,
   │       - evaluated to this expression

error: contract broken by a value
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ std.contract.Equal 3
  │ -------------------- expected type
  │
  ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
  │
1 │ foo + 1
  │ ^^^^^^^ applied to this expression
  │
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ 2
  │ - evaluated to this value

error: tests failed
